javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.23.MISSINGRETURN.1.javali
//2.3.23
//MISSING RETURN

class Main {
	int i;
	int a(){
	}
	
	void main() {
		i = a();

	}
}